--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/main.css">
     <link rel="stylesheet" href="styles/contact.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>FurnyStyle - კონტაქტი</title>
 </head>
 
@@ -17,7 +18,7 @@
         <nav>
             <ul>
                 <li><a href="main.html">მთავარი</a></li>
-                <li><a href="#">კატალოგი</a></li>
+                <li><a href="cataloge.html">კატალოგი</a></li>
                 <li><a href="about.html">ჩვენ შესახებ</a></li>
                 <li><a href="contact.html" class="active">კონტაქტი</a></li>
             </ul>
@@ -117,7 +118,7 @@
         <section class="virtual-showroom">
             <h3>ვირტუალური შოურუმი</h3>
             <p>დაათვალიერეთ ჩვენი პროდუქცია ონლაინ. შეარჩიეთ ავეჯი და დაგვიკავშირდით მისი შეძენისთვის.</p>
-            <a href="#" class="showroom-btn">შოურუმის ნახვა</a>
+            <a href="cataloge.html" class="showroom-btn">შოურუმის ნახვა</a>
         </section>
         
         <section class="map-section">
