--- a/aboutUs.html
+++ b/aboutUs.html
@@ -15,6 +15,10 @@
     <header>
         <h1><a href="main.html">FurnyStyle</a></h1>
 
+        <button class="hamburger-btn">
+            <i class="fas fa-bars"></i>
+        </button>
+
         <nav>
             <ul>
                 <li><a href="main.html">მთავარი</a></li>
@@ -24,6 +28,9 @@
             </ul>
         </nav>
     </header>
+
+    <div class="nav-overlay"></div>
+
 
     <main class="about-container">
         <section class="about-hero">
@@ -105,5 +112,6 @@
             <p>© 2025 FurnyStyle – All rights reserved</p>
         </div>
     </footer>
+    <script src="javascript/mian.js"></script>
 </body>
 </html>
