--- a/cataloge.html
+++ b/cataloge.html
@@ -15,6 +15,10 @@
     <header>
         <h1><a href="main.html">FurnyStyle</a></h1>
 
+        <button class="hamburger-btn">
+            <i class="fas fa-bars"></i>
+        </button>
+
         <nav>
             <ul>
                 <li><a href="main.html">მთავარი</a></li>
@@ -25,6 +29,9 @@
         </nav>
 
     </header>
+
+    <div class="nav-overlay"></div>
+
 
     <section class="grid-gallery-section">
         <button>
@@ -65,6 +72,7 @@
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="javascript/mian.js"></script>
 </body>
 
 <footer>
