--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,10 @@
     <header>
         <h1><a href="main.html">FurnyStyle</a></h1>
 
+        <button class="hamburger-btn">
+            <i class="fas fa-bars"></i>
+        </button>
+
         <nav>
             <ul>
                 <li><a href="main.html">მთავარი</a></li>
@@ -24,6 +28,9 @@
             </ul>
         </nav>
     </header>
+
+    <div class="nav-overlay"></div>
+
 
     <main class="contact-container">
         <section class="contact-hero">
@@ -136,5 +143,6 @@
             this.reset();
         });
     </script>
+    <script src="javascript/mian.js"></script>
 </body>
 </html>
