--- a/main.html
+++ b/main.html
@@ -4,15 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+        integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles/main.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <title>FurnyStyle</title>
 </head>
 
 <body>
     <header>
         <h1><a href="main.html">FurnyStyle</a></h1>
+        
+        <button class="hamburger-btn">
+            <i class="fas fa-bars"></i>
+        </button>
 
         <nav>
             <ul>
@@ -22,8 +29,10 @@
                 <li><a href="contact.html">კონტაქტი</a></li>
             </ul>
         </nav>
-
     </header>
+
+    <div class="nav-overlay"></div>
+
 
     <section class="hero">
         <h2>დახვეწილი და ელეგანტური ავეჯი</h2>
@@ -40,7 +49,7 @@
         </div>
         <button class="btn right">&#10095;</button>
     </div>
-    
+
     <script src="javascript/mian.js"></script>
 </body>
 
@@ -70,7 +79,10 @@
 
         <div class="map">
             <h3 class="address">მისამართი</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2974.1086329654113!2d44.789683675230144!3d41.804420170025345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40446c29c95e9047%3A0x8f38f086ba274f12!2sXelosnebis%20qalaqi%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1741678299856!5m2!1sen!2sge" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2974.1086329654113!2d44.789683675230144!3d41.804420170025345!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40446c29c95e9047%3A0x8f38f086ba274f12!2sXelosnebis%20qalaqi%2C%20T&#39;bilisi!5e0!3m2!1sen!2sge!4v1741678299856!5m2!1sen!2sge"
+                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
 
